--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ gd32vf103xx-hal = "0.2.0"
 embedded-hal = "0.2.3"
 nb = "0.1.2"
 riscv = "0.5.4"
+
+[dev-dependencies]
+riscv-rt = "0.6.1"
+panic-halt = "0.2.0"
