--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,11 @@
 name = "seedstudio-gd32v"
 version = "0.0.0"
 authors = ["Vadim Kaushan <admin@disasm.info>"]
+repository = "https://github.com/riscv-rust/seedstudio-gd32v"
+categories = ["embedded", "hardware-support", "no-std"]
 description = "Board support crate for the GD32 RISC-V Dev Board board from SeeedStudio"
+keywords = ["riscv", "gd32", "bsp"]
+license = "ISC"
 edition = "2018"
 
 [dependencies]
