--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Vadim Kaushan <admin@disasm.info>"]
 repository = "https://github.com/riscv-rust/seedstudio-gd32v"
 categories = ["embedded", "hardware-support", "no-std"]
-description = "Board support crate for the GD32 RISC-V Dev Board board from SeeedStudio"
+description = "Board support crate for the GD32 RISC-V Dev Board from SeeedStudio"
 keywords = ["riscv", "gd32", "bsp"]
 license = "ISC"
 edition = "2018"
