--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,16 @@ embedded-hal = "0.2.3"
 nb = "0.1.2"
 riscv = "0.5.4"
 
+[dependencies.ili9341]
+#version = "0.2.0"
+git = "https://github.com/Disasm/ili9341-rs.git"
+rev = "c51eaa4ffa99659ee5e114aeb3b9e06f789af12d"
+features = ["graphics"]
+optional = true
+
 [dev-dependencies]
 riscv-rt = "0.6.1"
 panic-halt = "0.2.0"
+
+[features]
+lcd = ["ili9341"]
