Enable lcd feature for docs.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,6 @@ required-features = ["lcd"]
 [[example]]
 name = "ferris"
 required-features = ["lcd"]
+
+[package.metadata.docs.rs]
+features = ['lcd']
