--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ gd32vf103xx-hal = "0.3.0"
 embedded-hal = "0.2.3"
 nb = "0.1.2"
 riscv = "0.5.4"
+embedded-graphics = { version = "0.6.2", optional = true }
 
 [dependencies.ili9341]
 version = "0.3.0"
@@ -23,10 +24,9 @@ optional = true
 [dev-dependencies]
 riscv-rt = "0.6.1"
 panic-halt = "0.2.0"
-embedded-graphics = "0.6.2"
 
 [features]
-lcd = ["ili9341"]
+lcd = ["ili9341", "embedded-graphics"]
 
 [[example]]
 name = "display"
